--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,101 @@
 /* MAIN CSS */
 
+body {
+    margin: 0;
+    padding: 0;
+    letter-spacing: 1px;
+}
+
+/* Buy now */
+#buy-now {
+}
+
+.buy-money {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 99;
+    color: #a3a3a3;
+    font-size: 14px;
+    line-height: 27px;
+}
+
+.buy-money > span {
+    position: absolute;
+    text-transform: uppercase;
+    top: 1px;
+    left: 5px;
+    font-size: 8px;
+    line-height: 10px;
+    padding: 3px 5px;
+    background-color: var(--primary-color);
+    color: #fff;
+}
+
+.buy-money a {
+    background-color: #555;
+    box-shadow: 0 0 20px rgb(0 0 0 / 15%);
+    border-radius: 100%;
+    height: 65px;
+    width: 65px;
+    text-align: center;
+    line-height: 25px;
+    font-size: 25px;
+    color: #fff;
+    float: left;
+    text-decoration: none;
+    display: table;
+}
+
+.buy-unit {
+    line-height: 8px;
+    font-size: 8px;
+    left: 13px;
+    top: 22px;
+    position: absolute;
+    text-align: center;
+}
+
+.buy-value {
+    display: table-cell;
+    padding-top: 7px;
+    padding-left: 5px;
+    vertical-align: middle;
+    text-align: center;
+    line-height: 25px;
+    font-size: 25px;
+}
+
+
+.buy-icon {
+    right: 80px;
+    z-index: 99;
+    bottom: 30px;
+    position: fixed;
+
+}
+
+.buy-icon a {
+    background-color: #555;
+    box-shadow: 0 0 20px rgb(0 0 0 / 15%);
+    border-radius: 100%;
+    height: 35px;
+    width: 35px;
+    float: left;
+    font-size: 14px;
+    line-height: 27px;
+}
+
+.buy-icon img {
+    width: 15px;
+    line-height: 27px;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
+
+/* Header */
 #header {
     height: 77px;
     position: relative;
@@ -16,11 +112,11 @@
     box-sizing: border-box;
 }
 
-.header__logo {
+.header-logo {
     width: 170px;
 }
 
-.header__navbar {
+.header-navbar {
     width: 100%;
     margin: 0 0 0 60px;
 }
@@ -71,6 +167,10 @@
     padding: 15px 20px;
     border-bottom: 1px solid #f1f1f1;
     position: relative;
+}
+
+.sub-nav li:hover {
+    background-color: rgba(0, 0, 0, 0.05)
 }
 
 .sub-nav a {
@@ -282,7 +382,7 @@
     position: relative;
     display: none;
     text-align: center;
-    border-radius: 50px !important;
+    border-radius: 50px;
 }
 
 .slider__buy-btn .active {
@@ -315,5 +415,523 @@
 
 /* Container */
 #container {
-    height: 1000px
+    /* position: relative; */
+}
+.content-section {
+    margin-top: 60px;
+    position: relative;
+}
+
+.content-info {
+    padding: 70px !important;
+    box-sizing: border-box;
+    z-index: 0;
+}
+
+.content-sub-heading {
+    text-transform: uppercase;
+    color: #9A9A9A;
+    font-size: 1.4rem;
+    letter-spacing: 2px;
+    line-height: 27px;
+    margin: 0;
+}
+
+.content-heading {
+    margin-top: 18px;
+    margin-bottom: 18px;
+    font-size: 3.6rem;
+    color: #555555;
+    letter-spacing: 1px;
+    line-height: 36px;
+}
+
+.content-heading span {
+    position: relative;
+}
+
+.content-heading span::after {
+    content: "";
+    position: absolute;
+    float: left;
+    width: 100%;
+    height: 5px;
+    left: 0;
+    bottom: 11px;
+    z-index: -1;
+    background-color: var(--primary-color);
+}
+
+.content-text {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 35px;
+}
+
+.content-text__item {
+    font-size: 1.4rem;
+    color: #9A9A9A;
+    line-height: 27px;
+    letter-spacing: 1px;
+}
+
+.content-text__item:first-child {
+    padding-left: 5px;
+    padding-right: 15px;
+}
+
+.content-text__item:last-child {
+    padding-left: 15px;
+    padding-right: 5px;
+}
+
+
+.content-btn {
+    padding: 12px 34px;
+    border-radius: 38px;
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+    line-height: 14px;
+}
+
+.content-tours {
+    position: absolute;
+    bottom: 33px;
+    left: -18px;
+}
+
+.content-tours .row {
+    height: 230px;
+    width: 920px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.tours-item {
+    bottom: 0;
+    left: 0;
+    position: relative;
+}
+
+.tour-img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+}
+
+.tour-price {
+    position: absolute;
+    border-radius: 1.4rem;
+    padding: 8px 20px 5px;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    letter-spacing: 1px;
+    top: 20px;
+    right: -26px;
+    color: #fff;
+}
+
+.content-video {
+    position: relative;
+}
+
+.content-thumbnail {
+    width: 400px;
+    height: 660px;
+    object-fit: cover;
+
+}
+
+.content-icon {
+    text-decoration: none;
+    position: absolute;
+    top: 43%;
+    left: 40%;
+}
+
+.content-icon img {
+    width: 80px;
+}
+
+.our-service {
+    box-sizing: border-box;
+    padding: 80px 73.5px 90px;
+}
+
+.services-item {
+    display: flex;
+    padding: 20px 15px 25px;
+    margin-top: 22px;
+}
+
+.service-icon {
+    width: 50px;
+    height: 50px;
+}
+
+.service-content {
+    padding-left: 20px;
+    letter-spacing: 1px;
+}
+
+.service-content h1 {
+    font-size: 24px;
+    margin: 0;
+}
+
+.service-content p {
+    font-size: 1.4rem;
+    line-height: 24px;
+    margin: 20px 0 25px;
+}
+
+.service-content .btn {
+    font-size: 1.4rem;
+    text-transform: none;
+    padding: 7px 20px;
+}
+
+.sale-tab {
+    padding: 90px 40px 102px;
+    background-color: var(--primary-color);
+    width: 296px;
+    box-sizing: border-box;
+    margin-left: 15px;
+}
+
+.sale-tab > h1 {
+    line-height: 55px;
+}
+
+.sale-tab span:after {
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: unset;
+}
+
+.sale-times {
+    margin-bottom: 50px;
+}
+
+.sale-times .row{
+    justify-content: space-around;
+}
+
+.sale-time__item {
+
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sale-time__item h1 {
+    font-size: 3.6rem;
+    font-weight: normal;
+}
+
+.sale-time__item h2 {
+    font-size: 1.4rem;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+
+.sale-tab a {
+    background-color: #fff;
+    color: var(--primary-color);
+    height: 44px;
+    line-height: 14px;
+    font-size: 1.4rem;
+    padding: 12px 35px;
+    border-radius: 30px;
+}
+
+.sale-heading > h1 {
+    line-height: 55px;
+}
+
+.sale-list {
+    padding-left: 15px;
+    height: 100%;
+}
+
+.sale-item {
+    border: 1px solid #f1f1f1;
+    width: 405px;
+    height: 100%;
+    margin: 0;
+}
+
+.sale-item img {
+    width: 100%;
+}
+
+.sale-picture {
+    position: relative;
+
+}
+
+.sale-icon {
+    position: absolute;
+    right: 20px;
+    bottom: -25px;
+    color: #9a9a9a;
+    border-radius: 100%;
+    height: 50px;
+    width: 50px;
+    background: linear-gradient(to right, #ffd205 0%, #ff9b05 100%);
+}
+
+.sale-icon img {
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    width: 26px;
+    font-size: 1.4rem;
+    line-height: 27px;
+}
+
+.sale-content {
+    padding: 30px 30px 35px;
+}
+
+.sale-heading h3 {
+    font-size: 2rem;
+    color: #555;
+    margin: 0 0 10px;
+}
+
+.sale-heading h5 {
+    font-size: 1.5rem;
+    color: #9A9A9A;
+    font-weight: normal;
+    letter-spacing: 2px;
+    margin: 0 0 20px;
+}
+
+.sale-line {
+    border-bottom: 2px solid #f1f1f1;
+    height: 1px;
+    float: left;
+    width: 100%;
+}
+
+.sale-price {
+    width: 100%;
+    padding: 15px 0 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.sale-price__tag h6 {
+    font-weight: normal;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    color: #555;
+    margin: 0;
+    line-height: 13px;
+}
+
+.sale-price__tag h6:nth-child(2) {
+    margin: 7px 0;
+}
+
+.sale-price__tag span {
+    background-color: #ffd205;
+    line-height: 1.3rem;
+    font-size: 1rem;
+    border-radius: 30px;
+    letter-spacing: 1px;
+    padding: 0 10px;
+    margin-left: 5px;
+}
+
+.sale-price__money h2 {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+    font-weight: normal;
+    letter-spacing: 1px;
+    margin: 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.sale-note p {
+    font-size: 14px;
+    line-height: 30px;
+    color: #9a9a9a;
+    margin: 20px 0 30px;
+}
+
+.sale-note .btn {
+    background-color: #ffd205;
+    font-size: 1.4rem;
+    padding: 10px 20px;
+}
+
+.blog-heading span:after {
+    background-color: #1bbc9b;
+}
+
+.blog-heading {
+    margin-bottom: 12px;
+}
+
+.blog-item {
+    width: 570px;
+    height: 326px;
+    padding: 15px;
+}
+
+.blog-section {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: 1px solid #f1f1f1;
+}
+
+.blog-item img {
+    width: 285px;
+    height: 324px;
+    object-fit: cover;
+}
+
+.blog-content {
+    height: 324px;
+    padding: 30px;
+}
+
+.blog-content p {
+    color: #9a9a9a;
+    letter-spacing: 2px;
+    font-size: 1.4rem;
+    line-height: 2.7rem;
+}
+
+.blog-content h3 {
+    color: #555;
+    font-size: 20px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    margin: 5px 0 20px;
+}
+
+.blog-note {
+    letter-spacing: 1px;
+    margin: 0;
+}
+
+.blog-content .btn {
+    font-size: 1.4rem;
+    padding: 10px 20px;
+}
+
+
+/* Footer */
+#footer {
+    height: 500px;
+}
+
+.footer-background {
+    position: relative;
+    height: 100%;
+    background: url('../img/para07.jpg') center center / cover no-repeat ;
+}
+/* 
+.footer-background img {
+    width: 100%;
+    object-fit: cover;
+    height: auto;
+    max-height: 500px;
+} */
+.footer-list {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.footer-list .grid{
+    background-color: #fff;
+    box-sizing: border-box;
+}
+
+.footer-contact {
+    padding: 0 25px 0 20px;
+    margin-top: 10px;
+}
+
+.footer-contact img {
+    width: 150px;
+    line-height: 27px;
+}
+
+.footer-contact p {
+    color: #9a9a9a;
+    font-size: 1.4rem;
+    line-height: 2.7rem;
+    margin: 28px 0 25px;
+}
+
+.footer-social {
+    display: flex;
+}
+
+.footer-social a {
+    margin-right: 20px;
+}
+
+.footer-social img {
+    width: 22px;
+}
+
+.footer-category .l-4 {
+    padding: 0 15px !important;
+    width: 155px;
+}
+
+.footer-category h6 {
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    letter-spacing: 2px;
+    color: #555;
+    margin: 25px 0 35px;
+}
+
+.footer-category__item {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-category__item li {
+    font-size: 1.4rem;
+    line-height: 2.7rem;
+    color: #9a9a9a;
+}
+
+.footer-category__item img {
+    width: 10px;
+}
+
+.footer-end {
+    height: 52px;
+    width: 100%;
+    background-color: var(--primary-color);
+    margin: 0 auto !important;
+}
+
+.footer-end div {
+    padding: 20px !important;
+}
+
+.footer-end h6 {
+    font-size: 12px;
+    text-transform: uppercase;
+    line-height: 12px;
+    letter-spacing: 2px;
+    font-weight: normal;
+    color: #fff;
+    margin: 0;
 }
