--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -570,3 +570,138 @@
         margin-left: 91.66667%;
     }
 }
+
+@media (min-width: 1200px) {
+    .content-info {
+        padding: 70px !important;
+    }
+}
+
+/* Summer Sale */
+@media (min-width: 1200px) and (max-width: 1239px) {
+    .wide {
+        width: 100%;
+    }
+}
+
+/* Wrap */
+@media (max-width: 1199px) {
+    .wide .l-2,
+    .wide .l-3,
+    .wide .l-4, 
+    .wide .l-5, 
+    .wide .l-6, 
+    .wide .l-8 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .row {
+        display: block;
+    }
+    /* #slider {
+        height: auto;
+        min-height: 333px;
+        max-height: 800px;
+    } */
+    #buy-now,
+    .header-navbar {
+        display: none;
+    }
+
+    #header {
+        height: 140px;
+    }
+
+    .nav__bar-btn {
+        display: block;
+    }
+
+    .header-item__logo {
+        width: 100%;
+        text-align: center;
+    }
+
+    .content-text__item:first-child,
+    .content-text__item:last-child {
+        padding: 0 0 0 15px !important;
+    }
+    .content-video {
+        margin-top: 32px;
+    }
+    .content-thumbnail {
+        width: 100%;
+        height: auto;
+    }
+    .content-tours {
+        position: unset;
+        display: inline-block !important;
+        margin-left: 10px;
+    }
+    .tour-img {
+        width: 100%;
+        height: 100%;
+        display: block;
+    }
+    .tour-price {
+        top: 40px;
+        right: 50px;
+    }
+    .content-tours .row {
+        width: 100%;
+        height: auto;
+    }
+
+    .sale-tab {
+        width: 100%;
+        padding: 40px !important;
+        margin-bottom: 15px;
+    }
+    .sale-times .row {
+        display: flex;
+    }
+    .sale-time__item {
+        flex: 0 0 50% !important;
+        max-width: 50% !important;
+    }
+    .sale-list .col {
+        margin: 15px 0;
+    }
+    .sale-item {
+        width: 100%;
+    }
+    .blog-item {
+        width: 100%;
+    }
+    .blog-item img {
+        width: 100%;
+    }
+    .blog-section {
+        display: flex;
+    }
+    .blog-section .l-6 {
+        flex: 0 0 50%;
+        width: 50%;
+    }
+    #footer {
+        height: 1181px;
+    }
+    .footer-end {
+        height: 104px;
+    }
+    .footer-end h6 {
+        text-align: center !important;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1199px) {
+    .tour-price {
+        border-radius: 2.4rem;
+        padding: 10px 30px 10px;
+        font-size: 2.4rem;
+        line-height: 2.4rem;
+        letter-spacing: 2px;
+    }
+    .blog-item {
+        padding: 15px 0 15px;
+    }
+}
