--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,14 +1,37 @@
 /* PC */
-@media (min-width: 1024px) {
-
+@media (min-width: 1025px) {
+    .content-section {
+        flex-wrap: nowrap;
+    }
 }
 
 /* Mobile & Tablet */
-@media (max-width: 1023px) {
+@media (max-width: 1024px) {
     .hide-on-mobile-tablet {
         display: none;
     }
-
+    .text-content {
+        top: 0;
+    }
+    .text-content li {
+        font-weight: 500;
+        letter-spacing: 0;
+    }
+    .tours-item {
+        display: block;
+    }
+    .slider__buy-btn {
+        top: 70%;
+        left: 40%;
+    }
+    .buy-btn {
+        font-size: 2.5rem;
+        line-height: 6rem;
+        font-weight: 600;
+        border-radius: 50px;
+        width: 275px;
+        height: 63px;
+    }
 }
 
 /*Tablet */
@@ -20,6 +43,9 @@
     .hide-on-tablet {
         display: none;
     }
+    #slider {
+        height: 513.19px;
+    }
 }
 
 /* Mobile */
@@ -30,6 +56,59 @@
     }
     .hide-on-mobile {
         display: none;
+    }
+    #slider {
+        height: 276.64px;
+    }
+    .slider__buy-btn {
+        top: 65%;
+        left: 22%;
+    }
+    .buy-btn {
+        font-size: 1.7rem;
+        line-height: 4.3rem;
+        font-weight: 600;
+        border-radius: 50px;
+        width: 186px;
+        height: 46px;
+    }
+    .content-info {
+        padding: 0 50px;
+    }
+    #container {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .our-service {
+        padding: 80px 10px 90px;
+    }
+    .tour-price {
+        top: 9px;
+        right: 9px;
+    }
+    .blog-heading {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .blog-item {
+        padding: 0;
+        margin-top: 30px;
+    }
+    .blog-section {
+        display: block;
+    }
+    .blog-section .l-6 {
+        flex: 0 0 100%;
+        width: 100%;
+    }
+    #footer {
+        height: 1394px;
+    }
+    .footer-list .grid {
+        width: 270px;
+    }
+    .footer-end {
+        height: 128px;
     }
     .header__search {
         position: absolute;
@@ -51,5 +130,178 @@
             opacity: 1;
             top: var(--header-height);
         }
+    }
+}
+
+
+
+/* Text heading */
+@media (min-width: 1199px) and (max-width: 1226px) {
+    .text-heading p {
+        font-size: 4.4rem;
+        line-height: 4.4rem;
+    }
+}
+
+@media (min-width: 1172px) and (max-width: 1198px) {
+    .text-heading p {
+        font-size: 4.3rem;
+        line-height: 4.3rem;
+    }
+}
+
+@media (min-width: 1144px) and (max-width: 1171px) {
+    .text-heading p {
+        font-size: 4.2rem;
+        line-height: 4.2rem;
+    }
+}
+
+@media (min-width: 1116px) and (max-width: 1143px) {
+    .text-heading p {
+        font-size: 4.1rem;
+        line-height: 4.1rem;
+    }
+}
+
+@media (min-width: 1089px) and (max-width: 1115px) {
+    .text-heading p {
+        font-size: 4rem;
+        line-height: 4rem;
+    }
+}
+
+@media (min-width: 1061px) and (max-width: 1088px) {
+    .text-heading p {
+        font-size: 3.9rem;
+        line-height: 3.9rem;
+    }
+}
+
+@media (min-width: 1034px) and (max-width: 1060px) {
+    .text-heading p {
+        font-size: 3.8rem;
+        line-height: 3.8rem;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1033px) {
+    .text-heading p {
+        font-size: 3.7rem;
+        line-height: 3.7rem;
+    }
+}
+
+/* text content */
+@media (min-width: 1147px) and (max-width: 1208px) {
+    .text-content li {
+        font-size: 1.9rem;
+    }
+}
+@media (min-width: 1085px) and (max-width: 1146px) {
+    .text-content li {
+        font-size: 1.8rem;
+    }
+}
+@media (min-width: 1025px) and (max-width: 1184px) {
+    .text-content li {
+        font-size: 1.7rem;
+    }
+}
+@media (min-width: 1004px) and (max-width: 1024px) {
+    .text-content li {
+        font-size: 2rem;
+        line-height: 2.5rem;
+    }
+}
+@media (min-width: 896px) and (max-width: 1003px) {
+    .text-content li {
+        font-size: 1.8rem;
+        line-height: 2.4rem;
+    }
+}
+@media (min-width: 845px) and (max-width: 895px) {
+    .text-content li {
+        font-size: 1.7rem;
+        line-height: 2.3rem;
+    }
+}
+@media (min-width: 794px) and (max-width: 844px) {
+    .text-content li {
+        font-size: 1.7rem;
+        line-height: 2.2rem;
+    }
+}
+@media (max-width: 793px) {
+    .text-content li {
+        font-size: 1.6rem;
+        line-height: 2.1rem;
+    }
+}
+
+@media (min-width: 1178px) and (max-width: 1218px) {
+    .text-content li {
+        line-height: 2.9rem;
+    }
+}
+@media (min-width: 1137px) and (max-width: 1177px) {
+    .text-content li {
+        line-height: 2.8rem;
+    }
+}
+@media (min-width: 1096px) and (max-width: 1136px) {
+    .text-content li {
+        line-height: 2.7rem;
+    }
+}
+@media (min-width: 1054px) and (max-width: 1097px) {
+    .text-content li {
+        line-height: 2.6rem;
+    }
+}
+@media (min-width: 1025px) and (max-width: 1053px) {
+    .text-content li {
+        line-height: 2.5rem;
+    }
+}
+
+/* buy btn */
+@media (min-width: 1147px) and (max-width: 1208px) {
+    .buy-btn {
+        font-size: 1.9rem;
+        line-height: 4.9rem;
+    }
+}
+@media (min-width: 1085px) and (max-width: 1146px) {
+    .buy-btn {
+        font-size: 1.8rem;
+        line-height: 4.8rem;
+    }
+}
+@media (min-width: 1025px) and (max-width: 1184px) {
+    .buy-btn {
+        font-size: 1.7rem;
+        line-height: 4.7rem;
+    }
+}
+
+/* Only btn */ 
+@media (max-width: 777px) {
+    .text-content li {
+        display: none;
+    }
+    .slider-content {
+        position: unset;
+        width: 100%;
+        height: 100%;
+
+    }
+    .buy-btn {
+        font-size: 2rem;
+        line-height: 4.9rem;
+        font-weight: 600;
+        border-radius: 50px;
+        width: 217px;
+        height: 52px;
     }
 }
