--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -258,7 +258,7 @@ body {
 
 .nav__mobile-list {
     padding: 40px;
-    max-height: 100%;
+    max-height: 90%;
     overflow-y: auto;
 }
 
@@ -1103,6 +1103,7 @@ body {
     font-size: 1.4rem;
     line-height: 2.7rem;
     color: #9a9a9a;
+    cursor: pointer;
 }
 
 .footer-category__item img {
