--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ body {
     position: fixed;
     bottom: 30px;
     right: 30px;
-    z-index: 99;
+    z-index: 1;
     color: #a3a3a3;
     font-size: 14px;
     line-height: 27px;
@@ -138,6 +138,7 @@ body {
 #navbar a {
     color: var(--text-color);
     text-decoration: none;
+    user-select :none;
 }
 
 #navbar > li > a {
@@ -184,7 +185,7 @@ body {
     position: absolute;
     top: 0;
     padding: 0;
-    left: 210px;
+    left: 200px;
     min-width: 190px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(255, 255, 255, 20%);
@@ -285,6 +286,7 @@ body {
     display: block;
     line-height: 2.7rem;
     padding: 8px 0;
+    user-select :none;
 }
 
 .nav__mobile-list > li {
@@ -654,11 +656,49 @@ body {
 
 .content-icon:hover {
     opacity: 0.8;
+    cursor: pointer;
 }
 
 .content-icon img {
     width: 80px;
 }
+
+.video__overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+    animation: appearIn linear .2s;
+    z-index: 2;
+}
+
+.video__input {
+    display: none;
+}
+
+.video__input:checked ~ .video__overlay {
+    display: block;
+}
+
+.video__input:checked ~ .video-embedded {
+    display: block;
+}
+
+.video-embedded {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 15%;
+    animation: appearIn ease-in-out .2s;
+    z-index: 3;
+    width: 900px;
+    height: 506px;
+}
+
+
 
 .our-service {
     box-sizing: border-box;
